--- a/package.json
+++ b/package.json
@@ -22,15 +22,13 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.2",
+    "dat.gui": "^0.7.7",
     "extract": "^1.0.0",
-    "extract-loader": "^5.1.0",
     "fibers": "^5.0.0",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.0",
     "html-webpack-link-type-plugin": "^1.1.0",
     "html-webpack-plugin": "^5.2.0",
-    "image-webpack-loader": "^7.0.1",
-    "loader": "^2.1.1",
     "mini-css-extract-plugin": "^1.3.7",
     "node-sass": "^5.0.0",
     "postcss": "^8.2.6",
@@ -38,7 +36,10 @@
     "precss": "^4.0.0",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
+    "stats": "^1.0.0",
     "style-loader": "^2.0.0",
+    "three": "^0.125.2",
+    "three-sky": "^1.1.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.23.0",
     "webpack-cli": "^4.5.0",
@@ -46,10 +47,13 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.12.13",
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "@popperjs/core": "^2.7.0",
     "bootstrap": "^5.0.0-beta2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "path-browserify": "^1.0.1",
+    "popper.js": "^1.16.1",
+    "util": "^0.12.3"
   }
 }
