--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@babel/runtime-corejs3": "^7.13.0",
     "@popperjs/core": "^2.8.3",
     "bootstrap": "^5.0.0-beta2",
+    "bootstrap-icons": "^1.4.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "path-browserify": "^1.0.1",
